--- a/style.css
+++ b/style.css
@@ -1403,6 +1403,7 @@ a{text-decoration: none;
     justify-content: center;
     align-items: center;
     margin-top: 160px;
+    background-color: rgb(233, 210, 180);
 }
 
 .excavacionesAreni-1{
@@ -1431,14 +1432,96 @@ a{text-decoration: none;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 120px;
+   
 }
 
 .subcontainer-9 .AreniText-1 p{ width: 80%;
                                 font-size: 24px;
                                  padding: 12px;
-                                line-height: 1.5em;}
+                                line-height: 1.5em;
+                                
+                            }
 
+
+.fotosAreni-1{
+             display: flex;
+             flex-direction: row;
+             flex-wrap: wrap;
+             justify-content: center;
+             align-items: center;
+             background-color: rgb(248, 234, 216);
+             padding: 12px;
+             margin-top: 120px;
+             
+}
+
+
+.AreniFotos-1{ 
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+               
+                 margin: 24px;
+                width: 45%;
+                padding: 24px;
+                border-radius: 2%;
+                }
+
+.fotoAreni-1{
+                width: 550px;
+                padding: 12px;
+                 height: 650px;
+                border: #000000 solid 1px;
+                object-fit: cover;
+              
+            }
+
+
+.AreniFotos-2 {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+                margin: 24px;
+                border: #000000 solid 1px;
+                width: 35%;
+                padding: 24px;
+              border-radius: 2%;
+                
+                 height: 650px;
+                }
+
+.fotoAreni-2{
+                 
+                width: 250px;
+                margin-left: 24px;
+                margin-right: 24px;
+}
+
+.fotoAreni-3{
+                 
+                width: 250px;
+                margin-left: 24px;
+                margin-right: 24px;
+}
+
+.fotoAreni-4{
+                 
+                width: 250px;
+                margin-left: 24px;
+                margin-right: 24px;
+}
+
+.fotoAreni-5{
+                
+                width: 250px;
+                margin-left: 24px;
+                margin-right: 24px;
+}
 
 
 @media screen and (max-width: 768px) {
@@ -2630,4 +2713,82 @@ a{text-decoration: none;
         padding: 6px;
         font-size: 18px;
     }
+
+    
+
+    .fotosAreni-1{
+             display: flex;
+             flex-direction: row;
+             flex-wrap: wrap;
+             justify-content: center;
+             align-items: center;
+             background-color: rgb(248, 234, 216);
+             width: 100%;
+             padding: 12px;
+             margin-top: 120px;
+             
+}
+
+
+.AreniFotos-1{ 
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+               
+                 margin: 24px;
+                width: 100%;
+                padding: 24px;
+                border-radius: 2%;
+                }
+
+.fotoAreni-1{
+                
+                border: none;
+                object-fit: cover;
+              
+            }
+
+
+.AreniFotos-2 {
+                display: flex;
+             flex-direction: row;
+             flex-wrap: wrap;
+             justify-content: center;
+             align-items: center;
+             background-color: rgb(248, 234, 216);
+             width: 100%;
+             height: 100%;
+             padding: 12px;
+             margin-top: 120px;
+             border: none;
+                
+                
+                }
+
+.fotoAreni-2{
+                 
+                width: 100%;
+                padding: 5%;
+}
+
+.fotoAreni-3{
+                 
+                width: 100%;
+                padding: 5%;
+}
+
+.fotoAreni-4{
+                 
+                width: 100%;
+                padding: 5%;
+}
+
+.fotoAreni-5{
+                
+                width: 100%;
+                padding: 5%;
+}
+
 }
