--- a/style.css
+++ b/style.css
@@ -1471,7 +1471,7 @@ a{text-decoration: none;
                 }
 
 .fotoAreni-1{
-                width: 550px;
+                width: 100%;
                 padding: 12px;
                  height: 650px;
                 border: #000000 solid 1px;
