--- a/style.css
+++ b/style.css
@@ -1479,21 +1479,62 @@ a{text-decoration: none;
               
             }
 
+.epi-35a{display: flex;
+    justify-content: center;
+   }
+
+
+  .epi-35a p{
+    width: 100%;
+    padding: 6px;
+    font-size: 18px;
+    margin-top: 24px;
+    
+    
+}
+
 
 .AreniFotos-2 {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: center;
-                align-items: center;
+                align-items:center;
                 margin: 24px;
+                margin-top: 60px;
+                
+                
+                
+                }
+
+.fotosVasijas{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+                align-items:center;
                 border: #000000 solid 1px;
-                width: 35%;
+                width: 100%;
                 padding: 24px;
               border-radius: 2%;
-                
-                 height: 650px;
-                }
+
+}
+
+
+.epi-35b{display: flex;
+    justify-content: center;
+   }
+
+
+  .epi-35b p{
+    width: 100%;
+    padding: 6px;
+    font-size: 18px;
+    margin-top: 24px;
+    
+    
+}
+
 
 .fotoAreni-2{
                  
@@ -2739,7 +2780,7 @@ a{text-decoration: none;
                
                  margin: 24px;
                 width: 100%;
-                padding: 24px;
+                padding: 12px;
                 border-radius: 2%;
                 }
 
@@ -2751,7 +2792,7 @@ a{text-decoration: none;
             }
 
 
-.AreniFotos-2 {
+ .AreniFotos-2 {
                 display: flex;
              flex-direction: row;
              flex-wrap: wrap;
@@ -2762,12 +2803,13 @@ a{text-decoration: none;
              height: 100%;
              padding: 12px;
              margin-top: 120px;
-             border: none;
+             
                 
                 
                 }
+.fotosVasijas{border: none;}
 
-.fotoAreni-2{
+ .fotoAreni-2{
                  
                 width: 100%;
                 padding: 5%;
